nicerapp/domainConfigs/localhost_v2/index.css
html, body {
    padding : 0;
    margin : 0;
    font-family: 'Open Sans', sans-serif;
    overflow : hidden;
}
#siteBackground {
    position:absolute;
}
#siteBackground img {
    display : none;
    position : absolute;
}
img.bg_first {
    z-index : 211;
    display : none;
}
img.bg_last {
    z-index : 212;
    display : none;
}
#bg_video {
    width : 100%;
    height : 100%;
    position : relative;
    z-index : 8;
}

#siteContent {
    top : calc(1vh + 4rem);
    left : 1vw;
    width : calc(98vw - 6px);
    height : calc(97vh - 4rem - 6px);
    display : none;
    /*top : 48vh;
    left : 48vw;
    width : 4vw;
    height : 4vh;*/
    border-radius : 20px;
}
.vividDialogContent {
    overflow : auto;
    margin : 10px;
    display : none;
    /*width : calc(98vw - 15px);
    height: calc(100vh - 120px);*/
    width : calc(100% - 20px);
    height : calc(100% - 20px);
    z-index : 1100;
    /*opacity : 0.0001;*/
}
.vividDialogContent table, .vividDialogContent td {
    z-index : 1101;
}

#siteDateTime {
    display : flex;
    justify-content : center;
    align-items : center;
    text-align : center;
}

#siteComments {
    top : 2vh;
    height : 96vh;
    left : 102vw;
    width : 250px;
}

#siteToolbarRight {
    top : 2vh;
    height : 96vh;
    left : 102vw;
    width : 220px;
}

#siteStatusbar {
    top : 102vh;
    height : 4.5rem;
    left : 1vw;
    width : 98vw;
}
#siteStatusbar .vividDialogContent {
    width : 100%;
    height : 100%;
}
#siteStatusbar .vividDialogContent td {
    vertical-align: middle;
}



#siteVideo {
    top : 2vh;
    left : 102vw;
    height : 250px;
    width : 250px;
}

#siteVideoSearch {
    top : calc(2vh + 260px);
    left : 102vw;
    height : calc(97vh - 260px);
    width : 230px;
}

.vividDialog {
    position : absolute;
    display : block;
    z-index : 1000;
}
.vividButton, .vividMenu {
    position : absolute;
    display : flex;
    font-size : 0.3rem;
    z-index : 1000;
    justify-content : center;
    align-items : center;
    text-align : center;
}
.vividButton, .vividButtonSelected {
    position : absolute;
    display : flex;
    justify-content : center;
    align-items : center;
    text-align : center;
    width : 180px;
    height : 0.55rem;
    font-size : 0.8rem;
    font-weight : bold;
}
.vividButton.level1, .vividButtonSelected.level1 {
    margin-top : 5px;
}

#siteDateTime {
    top : -5rem;
    left : 10px;
    width : 230px;
    height : 2rem;
    font-size : 1rem;
    font-weight : bold;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius : 10px;
}

#btnThemeSwitch {
    position : absolute;
    top : calc(1vh - 3px);
    left : calc(1vw + 245px);
    width : 40px;
    z-index : 1100;
    border : 3px ridge lime;
    border-radius : 10px;
    box-shadow : 4px 4px 2px rgba(0,0,0,0.7), inset -2px -2px 2px rgba(0,0,0,0.8), inset 2px 2px 2px rgba(0,0,0,0.8);
}
#btnThemeSwitch.phoneView {
    left : calc(1vw + 6px);
}

#btnChangeBackground {
    position : absolute;
    top : calc(1vh - 3px);
    left : calc(1vw + 300px);
    width : 40px;
    background : rgba(255,255,255,0.5);
    z-index : 1100;
    border : 3px ridge lime;
    border-radius : 10px;
    box-shadow : 4px 4px 2px rgba(0,0,0,0.7), inset -2px -2px 2px rgba(0,0,0,0.8), inset 2px 2px 2px rgba(0,0,0,0.8);
}
#btnChangeBackground.phoneView {
    left : calc(99vw - 50px);
}


#siteMenu {
    top : 1vh;
    left : calc(2vw + 340px);
    width : 220px;
    height : 1.5rem;
}
#siteMenu.phoneView {
    left : calc(50vw - 100px);
}

#siteRegistration {
    display : none;
    position : absolute;
    width : 300px;
    height : 250px;
    left : calc(50% - 150px);
    top : calc(50% - 125px);
    padding : 15px;
    z-index : 2000;
    justify-content : center;
}
#siteRegistration::before { 
    content : '';
    background : url('/nicerapp/siteMedia/backgrounds/tiled/active/blue/seamless-texture-blue-watercolor.jpg') repeat;
    opacity : 0.7;
    position:absolute;
    z-index:-1;
    border-radius : 15px;
    top : 0;
    left : 0;
    width : 100%;
    height : 100%;
}
#siteRegistrationContainer {
    position : relative;
    height : auto;
    text-align : center;
    display : flex;
    flex-direction : column;
    align-items : center;
}
#btnSrfSubmit {
    position : relative;
}
#btnSrfSubmit img {
    height : 1rem;
}

#siteLogin {
    display : none;
}

#site3D_backgroundsBrowser, #site3D_demo_cube, #site3D_demo_models {
    position : absolute;
    top : 0;
    left : 0;
    width : 100%;
    height : 100%;
    padding : 15px;
    z-index : 2000;
    justify-content : center;
    background : rgba(0,0,0,0);
}
/*#site3D_backgroundsBrowser::before { 
    content : '';
    background : url('/nicerapp/siteMedia/backgrounds/tiled/active/blue/seamless-texture-blue-watercolor.jpg') repeat;
    opacity : 0.5;
    position:absolute;
    z-index:-1;
    border-radius : 15px;
    top : 0;
    left : 0;
    width : 100%;
    height : 100%;
}*/


#site3D_demo {
    display : none;
    position : absolute;
    width : 300px;
    height : 200px;
    left : calc(50% - 150px);
    top : calc(50% - 100px);
    padding : 15px;
    z-index : 2000;
    justify-content : center;
}
#site3D_demo::before { 
    content : '';
    background : url('/nicerapp/siteMedia/backgrounds/tiled/active/blue/seamless-texture-blue-watercolor.jpg') repeat;
    opacity : 0.7;
    position:absolute;
    z-index:-1;
    border-radius : 15px;
    top : 0;
    left : 0;
    width : 100%;
    height : 100%;
}

select, optgroup {
    font-size : 2rem;
}

.contentSectionTitle {
    text-shadow : 2px 2px 1px rgba(0,0,0,0.4);
}

.selfHealerMsg {
    font-weight : bold;
}
.selfHealerDbg {
    color : rgba(150,150,150,1);
}
.selfHealerResult {
    color : rgba(150,150,255,1);
}
.selfHealerFailed {
    color : rgba(255,150,150,1);
}
.selfHealerWarning {
    color : rgba(235,161,52,1);
}


.mainTooltipTheme {
	border:1px solid navy;
    border-radius : 7px;
    box-shadow : 2px 2px 1px rgba(0,0,0,0.7), 0px 0px 5px rgba(0,0,0,0.7), inset 2px 2px 2px rgba(0,0,0,0.87), inset -2px -2px 2px rgba(0,0,0,0.87);
    opacity : 1;
    z-index : 2765;
	text-align:left;
	color:#8c3901;
	background-color:#fef9d9;
/*	background-image:url(/nicerapp/3rd-party/jQuery/poshytip/src/tip-yellow/tip-yellow.png); */
    font-family : Architects Daughter;
    font-size : 15px;
    font-weight : bold;
    padding : 8px 10px;
   /* animation : mainTooltipThemeAnim 2s infinite;*/
    border-radius : 7px;
}
.mainTooltipTheme .tip-arrow-top {
	margin-top:-7px;
	margin-left:15px;
	top:0;
	left:0;
	width:16px;
	height:10px;
    z-index : 2761;
	background:url(/nicerapp/3rd-party/jQuery/poshytip/src/tip-yellow/tip-yellow_arrows.png) no-repeat;
}
.mainTooltipTheme .tip-arrow-right {
	margin-top:-9px; /* approx. half the height to center it */
	margin-left:-4px;
	top:50%;
	left:100%;
	width:10px;
	height:20px;
    z-index : 2761;
	background:url(/nicerapp/3rd-party/jQuery/poshytip/src/tip-yellow/tip-yellow_arrows.png) no-repeat -16px 0;
}
.mainTooltipTheme .tip-arrow-bottom {
	margin-top:-6px;
	margin-left:15px;
	top:100%;
	left:0;
	width:16px;
	height:13px;
    z-index : 2761;
	background:url(/nicerapp/3rd-party/jQuery/poshytip/src/tip-yellow/tip-yellow_arrows.png) no-repeat -32px 0;
}
.mainTooltipTheme .tip-arrow-left {
	margin-top:-9px; /* approx. half the height to center it */
	margin-left:-6px;
	top:50%;
	left:0;
	width:10px;
	height:20px;
    z-index : 2761;
	background:url(/nicerapp/3rd-party/jQuery/poshytip/src/tip-yellow/tip-yellow_arrows.png) no-repeat -48px 0;
}


.mainTooltipTheme.tooltipster-sidetip .tooltipster-arrow-background {
	/*border: 10px solid transparent;*/
}

.mainTooltipTheme.tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-background {
	border-bottom-color: white;
    /*animation : mainTooltipThemeAnim2a 2s infinite;*/
	left: 0;
	top: 3px;
}

.mainTooltipTheme.tooltipster-sidetip.tooltipster-left .tooltipster-arrow-background {
	border-left-color: white;
    /*animation : mainTooltipThemeAnim2b 2s infinite;*/
	left: -3px;
	top: 0;
}

.mainTooltipTheme.tooltipster-sidetip.tooltipster-right .tooltipster-arrow-background {
	border-right-color: white;
    /*animation : mainTooltipThemeAnim2c 2s infinite;*/
	left: 3px;
	top: 0;
}

.mainTooltipTheme.tooltipster-sidetip.tooltipster-top .tooltipster-arrow-background {
	border-top-color: white;
    /*animation : mainTooltipThemeAnim2d 2s infinite;*/
	left: 0;
	top: -3px;
}

/* .tooltipster-arrow-border */

.mainTooltipTheme.tooltipster-sidetip .tooltipster-arrow-border {
	/*border: 10px solid transparent;*/
	left: 0;
	top: 0;
}

.mainTooltipTheme.tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-border {
	border-bottom-color: yellow;
}

.mainTooltipTheme.tooltipster-sidetip.tooltipster-left .tooltipster-arrow-border {
	border-left-color: yellow;
}

.mainTooltipTheme.tooltipster-sidetip.tooltipster-right .tooltipster-arrow-border {
	border-right-color: yellow;
}

.mainTooltipTheme.tooltipster-sidetip.tooltipster-top .tooltipster-arrow-border {
	border-top-color: yellow;
}

/*
 * page loading icon
 */
.lds-facebook {
  display: block;
  position: absolute;
  width: 80px;
  height: 80px;
  left : calc(50% - 40px);
  top : calc(50% - 40px);
  z-index : 1000000;
}
.lds-facebook div {
  display: inline-block;
  position: absolute;
  left: 8px;
  width: 16px;
  background : linear-gradient(rgba(252, 255, 48, 1), rgba(255, 193, 48, 1));
  border-radius : 5px;
  margin : 3px;
  box-shadow : 2px 2px 1px 1px rgba(0,0,0,0.4);
  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
}
.lds-facebook div:nth-child(1) {
  left: 8px;
  animation-delay: -0.24s;
}
.lds-facebook div:nth-child(2) {
  left: 32px;
  animation-delay: -0.12s;
}
.lds-facebook div:nth-child(3) {
  left: 56px;
  animation-delay: 0;
}
@keyframes lds-facebook {
  0% {
    top: 8px;
    height: 64px;
    opacity : 0.3;
  }
  50% {
    top: 24px;
    height: 32px;
    opacity : 0.87;
  }
  100% {
    top: 24px;
    height: 32px;
    opacity : 0.3;
  }
}



/*
 * blogging features 
 */
#jsTree {
    width : 100%;
    height : 100%;
}


#tinymce {
    /*display : none;*/
}

/*.tox-tinymce {
  opacity: 0;
  z-index : 1000;
  transition: opacity 1300ms;
}
.tox-tinymce.fade-in {
  opacity: 1;
}*/

